# fdt-tools

./: .gitignore  Makefile  README.md  fdtgrep.c  meson.build  meson_options.txt  util.c  util.h  version_gen.h.in
License/: README
libfdt_extra/: Makefile.libfdt_extra  fdt_region.c  fdt_region.h  meson.build  version.lds
scripts/: setlocalversion
tests/: Makefile.tests  grep.dts  meson.build  region_tree.c  run_tests.sh  testdata.h  tests.h  testutils.c  testutils.sh
